--- a/event_register_list.html
+++ b/event_register_list.html
@@ -349,9 +349,123 @@
                                </div>
                                   </div>
                            </div>
-                           <!-- <div class="owl-nav "><button type="button" role="presentation" class="owl-prev"><span aria-label="Previous"><i class="fa-solid fa-arrow-left"></i></span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next"><i class="fa-solid fa-arrow-right"></i></span></button></div>
-           
-                           <div class="owl-dots"><button role="button" class="owl-dot active"><span></span></button><button role="button" class="owl-dot"><span></span></button></div> -->
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">家長講座：溫習策略</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年4月27日</span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>10:00 - 13:00</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">教城世界閱讀日活動系列（二）繪本 × 共讀 共享創意教學</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2023年10月9日 - </span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>10:00 - 13:00</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">家長講座：溫習策略</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年4月27日</span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>10:00 - 13:00</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">教城世界閱讀日活動系列（二）繪本 × 共讀 共享創意教學</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2023年10月9日 - </span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>10:00 - 13:00</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">家長講座：溫習策略</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年4月27日</span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>10:00 - 13:00</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
+                            <div class="item">
+                                 <div class="slide-card">
+                                <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
+                               <div class="slider-data">
+                                <div class="content">教城世界閱讀日活動系列（二）繪本 × 共讀 共享創意教學</div>
+                                <ul>
+                                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2023年10月9日 - </span></li>
+                                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>10:00 - 13:00</span></li>
+                                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
+                                </ul>
+                               </div>
+                                  </div>
+                           </div>
                           </div>
                     </div>
                 </div>
@@ -377,6 +491,123 @@
 <div class="right-btm-data col-12 col-md-8 col-xl-10">
     <div class="slider">
         <div class="owl-carousel owl-carousel2 owl-theme">
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
+            <div class="item">
+                 <div class="slide-card">
+                <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
+               <div class="slider-data">
+                <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
+                <ul>
+                    <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年5月9日</span></li>
+                    <li><img src="assets/images/ClockFill (1).png" alt=""><span>15:00 - 16:30</span></li>
+                    <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
+                </ul>
+               </div>
+                  </div>
+           </div>
             <div class="item">
                  <div class="slide-card">
                 <img src="assets/images/Rectangle 50.png" alt="" class="top-img">
