--- a/event_register_list.html
+++ b/event_register_list.html
@@ -702,8 +702,8 @@
             },
         },
         navText: [
-  "<span aria-label='Previous'><i class='fa-solid fa-arrow-left text-white fs-4'></i></span>",
-  "<span aria-label='Next'><i class='fa-solid fa-arrow-right text-white fs-4'></i></span>"
+  "<span aria-label='Previous'><i class='fa-solid fa-arrow-left text-white fs-4 pt-1'></i></span>",
+  "<span aria-label='Next'><i class='fa-solid fa-arrow-right text-white fs-4 pt-1'></i></span>"
 ],
     });
 
@@ -730,8 +730,8 @@
             },
         },
       navText: [
-  "<span aria-label='Previous'><i class='fa-solid fa-arrow-left text-white fs-4'></i></span>",
-  "<span aria-label='Next'><i class='fa-solid fa-arrow-right text-white fs-4'></i></span>"
+  "<span aria-label='Previous'><i class='fa-solid fa-arrow-left text-white fs-4 pt-1'></i></span>",
+  "<span aria-label='Next'><i class='fa-solid fa-arrow-right text-white fs-4 pt-1'></i></span>"
 ],
     });
 });
