--- a/event_register_list.html
+++ b/event_register_list.html
@@ -110,18 +110,18 @@
 
       <section class="register-list">
         <div>
-            <img src="assets/images/Vector (7).png" alt="" class="d-none d-sm-block">
-            <img src="assets/images/Vector (8).png" alt="" class="d-sm-none">
+            <img src="assets/images/Vector (7).png" alt="" >
             <h1>活動概覽</h1>
         </div>
       </section>
+      
       <section class="register-list-form">
         <div class="container">
             <div class="form-list position-relative">
                 <form>
                     <div class="row form-list-data ">
-                        <div class="col-12 col-sm-6 col-lg-8 col-xl-9"><div> <input type="text" class="form-control" placeholder="輸入活動關鏈字"></div></div>
-                         <div class="col-12 col-sm-6 col-lg-4 col-xl-3 d-none d-sm-block"> <div class="d-flex"><div class="btn btn1 show-advanced">進階搜尋</div><button class="btn btn2">搜尋</button></div></div>
+                        <div class="col-12 col-sm-6 col-lg-8 col-xl-8"><div> <input type="text" class="form-control" placeholder="輸入活動關鏈字"></div></div>
+                         <div class="col-12 col-sm-6 col-lg-4 col-xl-4 d-none d-sm-block"> <div class="d-flex"><div class="btn btn1 show-advanced">進階搜尋</div><button class="btn btn2">搜尋</button></div></div>
                          <div class="col-12 custm-col12 hidden">
                             <div class="form-list-content">
                                 <div class="form-data">
@@ -304,7 +304,7 @@
                     <div class="list-slider-left">
                         <div><img src="assets/images/Group 1 (1).png" alt="" class="left-img"></div>
                         <h2>教城活動</h2>
-                    <div class="d-flex justify-content-end d-none d-md-block"> <button class="btn btn-yel-parent">更多活動</button></div>
+                    <div class="d-flex justify-content-end d-none d-md-block"> <a href="event_registerlist_all_event.html" class="btn btn-yel-parent">更多活動</a></div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 col-xl-7">
@@ -469,7 +469,7 @@
                           </div>
                     </div>
                 </div>
-                <div class="col-12 custom-none"> <div class="d-flex justify-content-center"> <button class="btn btn-yel ">更多活動</button></div>
+                <div class="col-12 custom-none"> <div class="d-flex justify-content-center"> <a href="event_registerlist_all_event.html" class="btn btn-yel ">更多活動</button></div>
               </div></div>
             </div>
         </div>
