--- a/event_register_list.html
+++ b/event_register_list.html
@@ -469,7 +469,7 @@
                           </div>
                     </div>
                 </div>
-                <div class="col-12 custom-none"> <div class="d-flex justify-content-center"> <a href="event_registerlist_all_event.html" class="btn btn-yel ">更多活動</button></div>
+                <div class="col-12 custom-none"> <div class="d-flex justify-content-center"> <a href="event_registerlist_all_event.html" class="btn btn-yel ">更多活動</a></div>
               </div></div>
             </div>
         </div>
@@ -486,7 +486,7 @@
   </div>
   <div class="strock-h2"><h2>活動推介</h2></div>
    </div>
-    <div class="text-end d-none d-sm-block"><button class="btn ">更多活動</button></div>
+    <div class="text-end d-none d-sm-block"><a href="event_registerlist_all_event.html" class="btn ">更多活動</a></div>
 </div>
 <div class="right-btm-data col-12 col-md-8 col-xl-10">
     <div class="slider">
@@ -654,7 +654,7 @@
     </div>
 </div>
 <div class="col-12 custom-none1">
-  <div class="d-flex justify-content-center"><button class="btn btn-yel2">更多活動</button></div>
+  <div class="d-flex justify-content-center"><a href="event_registerlist_all_event.html" class="btn btn-yel2">更多活動</a></div>
 </div>
             </div>
         </div>
