changes registration page

--- a/broadcast_message.html
+++ b/broadcast_message.html
@@ -62,9 +62,9 @@
                   <h3>EdMall</h3>
                 </div>
               </a>
-              <a href="#" class="main-left-data">
+              <a href="broadcast_message.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
-                <div class="main-border">
+                <div class="main-border fix">
                   <h3 class="text-orange">個人中心</h3>
                 </div>
               </a>
