--- a/event_registration.html
+++ b/event_registration.html
@@ -61,7 +61,7 @@
                   <h3>EdMall</h3>
                 </div>
               </a>
-              <a href="#" class="main-left-data">
+              <a href="broadcast_message.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
                 <div class="main-border">
                   <h3 class="text-orange">個人中心</h3>
