--- a/dashboard_event_detail.html
+++ b/dashboard_event_detail.html
@@ -160,7 +160,7 @@
                             <li><div>報名截止時間</div><div>2024/05/09 12:00</div></li>
                             <li><div>名額</div><div>150</div></li>
                         </ul>
-                        <a href="#" class="btn next-btn">立即報名</a>
+                        <a href="event_detail_registration.html" class="btn next-btn">立即報名</a>
                     </div>
                     <div class="contact-info">
                         <button class="blue-btn"> 聯絡方法</button>
