--- a/event_detail_registration.html
+++ b/event_detail_registration.html
@@ -124,7 +124,7 @@
             <div class="online-register-title">
                 <h3 class="text-center">網上報名</h3>
              <ul>
-                <li><a href="#" class="active"><h4 class="active">1</h4><span> 填寫個人資料&訂閱及細則條款</span></a></li>
+                <li><a href="#" class="active"><h4 class="active">1</h4><span class="span-div"> 填寫個人資料&訂閱及細則條款</span></a></li>
                 <li><a href="#" ><img src="assets/images/Vector (9).png" alt=""><h4 >2</h4> <span>遞交</span></a></li>
              </ul>
             </div>
@@ -162,7 +162,7 @@
                         <label>電郵</label>
                         <input type="text" class="form-control" placeholder="請輸入電郵">
                     </div>
-                    <div class="form-div mb-0 mb-sm-auto">
+                    <div class="form-div mb0">
                         <label>電話</label>
                         <select class="form-select " aria-label="Default select example ">
                             <option selected>區碼</option>
