--- a/dashboard_event_detail.html
+++ b/dashboard_event_detail.html
@@ -52,7 +52,7 @@
             <div class="main-tab-box d-none d-sm-flex">
                   <a href="event_register_list.html" class="main-left-data">
                     <img src="assets/images/main1.png" alt="" />
-                    <div class="main-border">
+                    <div class="main-border fix">
                       <h3>活動概覽</h3>
                     </div>
                   </a>
@@ -111,7 +111,7 @@
                 <h2 class="ps-4">【研討會】教師持續專業發展系列︰推廣閱讀文化</h2>
          </div>
           <div class="detail-back">
-                <a href="event_registration.html">
+                <a href="event_registerlist_all_event.html">
                   <i class="fa-solid fa-chevron-left"></i>
                   <span>返回活動登記概覽</span>
                 </a>
