--- a/event_registerlist_all_event.html
+++ b/event_registerlist_all_event.html
@@ -296,7 +296,7 @@
         <div class="container">
             <div class="grid">
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="dashboard_event_detail.html" class="slide-card">
                             <img src="assets/images/Rectangle 114.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">「e世代網絡喜航」家長講座（五）︰電子學習護眼心法 認清網絡陷阱</div>
@@ -306,10 +306,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>網上研討會</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">家長講座：溫習策略</div>
@@ -319,10 +319,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">教城世界閱讀日活動系列（二）繪本 × 共讀 共享創意教學</div>
@@ -332,10 +332,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -345,10 +345,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 114.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">「e世代網絡喜航」家長講座（五）︰電子學習護眼心法 認清網絡陷阱</div>
@@ -358,10 +358,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>網上研討會</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">家長講座：溫習策略</div>
@@ -371,10 +371,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">教城世界閱讀日活動系列（二）繪本 × 共讀 共享創意教學</div>
@@ -384,10 +384,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -397,10 +397,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 114.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -410,10 +410,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -423,10 +423,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -436,10 +436,10 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
                     <div class="slider">
-                        <div class="slide-card">
+                        <a href="#" class="slide-card">
                             <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -449,7 +449,7 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                              </div>
+                          </a>
                     </div>
             </div>
             <div class="table-pagination mt-5 mt-sm-0">
