event_registerlist_all_event fix box shadow

--- a/event_registerlist_all_event.html
+++ b/event_registerlist_all_event.html
@@ -296,20 +296,24 @@
         <div class="container">
             <div class="grid">
                     <div class="slider">
-                        <a href="dashboard_event_detail.html" class="slide-card">
-                            <img src="assets/images/Rectangle 114.png" alt="" class="top-img">
-                           <div class="slider-data">
-                            <div class="content">「e世代網絡喜航」家長講座（五）︰電子學習護眼心法 認清網絡陷阱</div>
-                            <ul>
-                                <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年6月8日 </span></li>
-                                <li><img src="assets/images/ClockFill (1).png" alt=""><span>11:00 - 12:30</span></li>
-                                <li><img src="assets/images/map.png" alt=""><span>網上研討會</span></li>
-                            </ul>
-                           </div>
-                          </a>
+                      <a href="dashboard_event_detail.html">
+                        <div class="slide-card">
+                          <img src="assets/images/Rectangle 114.png" alt="" class="top-img">
+                         <div class="slider-data">
+                          <div class="content">「e世代網絡喜航」家長講座（五）︰電子學習護眼心法 認清網絡陷阱</div>
+                          <ul>
+                              <li><img src="assets/images/CalendarFill.png" alt=""><span>2024年6月8日 </span></li>
+                              <li><img src="assets/images/ClockFill (1).png" alt=""><span>11:00 - 12:30</span></li>
+                              <li><img src="assets/images/map.png" alt=""><span>網上研討會</span></li>
+                          </ul>
+                         </div>
+                        </div>
+                      </a>
+                        
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div class="slide-card">
                             <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">家長講座：溫習策略</div>
@@ -319,10 +323,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div class="slide-card">
                             <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">教城世界閱讀日活動系列（二）繪本 × 共讀 共享創意教學</div>
@@ -332,10 +338,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div class="slide-card">
                             <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -345,10 +353,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div class="slide-card">
                             <img src="assets/images/Rectangle 114.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">「e世代網絡喜航」家長講座（五）︰電子學習護眼心法 認清網絡陷阱</div>
@@ -358,10 +368,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>網上研討會</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div  class="slide-card">
                             <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">家長講座：溫習策略</div>
@@ -371,10 +383,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div  class="slide-card">
                             <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">教城世界閱讀日活動系列（二）繪本 × 共讀 共享創意教學</div>
@@ -384,10 +398,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城2樓201-202室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div href="#" class="slide-card">
                             <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -397,10 +413,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div  class="slide-card">
                             <img src="assets/images/Rectangle 114.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -410,10 +428,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div class="slide-card">
                             <img src="assets/images/Rectangle 44.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -423,10 +443,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div class="slide-card">
                             <img src="assets/images/Rectangle 46 (2).png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -436,10 +458,12 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
                     <div class="slider">
-                        <a href="#" class="slide-card">
+                      <a href="#">
+                        <div  class="slide-card">
                             <img src="assets/images/Rectangle 42.png" alt="" class="top-img">
                            <div class="slider-data">
                             <div class="content">【研討會】教師持續專業發展系列︰推廣閱讀文化</div>
@@ -449,7 +473,8 @@
                                 <li><img src="assets/images/map.png" alt=""><span>沙田沙角邨香港教育城地下G01室</span></li>
                             </ul>
                            </div>
-                          </a>
+                          </div>
+                      </a>
                     </div>
             </div>
             <div class="table-pagination mt-5 mt-sm-0">
